# jobportal_chatbot

./: .gitignore  .python-version  Dockerfile  README.md  app.yaml  docker-compose.yml  fetch_secrets.py  pyproject.toml  requirements.txt  streamlit_app.py  test.ipynb
src/: constants.py  gcloud_connection.py  loader.py  prompts.py  utils.py  vectorstore.py
src/css/: css.py
src/documents/: Praktikum (m_w_d) im HR - Personalentwicklung.docx  Sachbearbeiter Kredit-_Projektmanagement (m_w_d).docx  Spezialist Kreditanalyse Real Estate (m_w_d).docx  Spezialist Payroll & HR Services (m_w_d).docx
